@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-09-06 01:26 pjf ;
+; @(#)$Ident: dist.ini 2013-10-21 15:03 pjf ;
 
 name              = File-DataClass
 abstract          = Structured data file IO with OO paradigm
@@ -25,7 +25,7 @@ Try::Tiny         = 0.18
 Type::Tiny        = 0.012
 XML::Bare         = 0.47
 XML::Simple       = 2.18
-Unexpected        = v0.12.0
+Unexpected        = v0.15.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
